fix minor layout issue

--- a/src/media/css/chart.styl
+++ b/src/media/css/chart.styl
@@ -87,7 +87,7 @@ svg {
     margin: 25px 0;
     label {
         display: inline-block;
-        width: 200px;
+        width: 235px;
     }
     input {
         display: inline-block;
